RESOLVED FIXED 260290
[css-grid] css-grid/grid-items/percentage-margin-dynamic.html is failing
https://bugs.webkit.org/show_bug.cgi?id=260290
Summary [css-grid] css-grid/grid-items/percentage-margin-dynamic.html is failing
Sammy Gill
Reported 2023-08-16 13:21:53 PDT
css-grid/grid-items/percentage-margin-dynamic.html is failing on WPT
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-16 13:24:31 PDT
Sammy Gill
Comment 2 2024-08-09 16:25:19 PDT
EWS
Comment 3 2024-08-10 17:10:17 PDT
Committed 282092@main (5d11fc8e580b): <https://commits.webkit.org/282092@main> Reviewed commits have been landed. Closing PR #31976 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.